deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kamichain
  namespace: kamichain-demo
spec:
  selector:
    app: kamichain
  ports:
    - port: 8080
      targetPort: 8080
